pref: Refactor random post selection logic